--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,14 @@
   <meta charset="utf-8">
   <title>My AngularJS App</title>
   <link rel="stylesheet" href="css/app.css"/>
+    <!--<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.5/leaflet.css" />-->
+    <!--<script src="http://cdn.leafletjs.com/leaflet-0.4.5/leaflet.js"></script>-->
+    <link rel="stylesheet" href="lib/leaflet/0.5.1/leaflet.css" />
+    <script src="lib/leaflet/0.5.1/leaflet-src.js"></script>
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
+    <li><a href="#/map1">Map</a></li>
     <li><a href="#/view2">view2</a></li>
   </ul>
 
@@ -15,14 +19,24 @@
 
   <div>Angular seed app: v<span app-version></span></div>
 
+
+
+
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular.min.js"></script>
   -->
-  <script src="lib/angular/angular.js"></script>
+  <script src="lib/angular/1.0.5/angular.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
+
+
+
+  <script src="js/angular-leaflet/leaflet.js"></script>
+
+
+
 </body>
 </html>
